Removed overflowing x-axel, fixed phone stuff

--- a/css/camera.css
+++ b/css/camera.css
@@ -155,6 +155,9 @@
 	vertical-align:	bottom;
 }
 
+.container {
+	overflow-x: hidden;
+}
 
 
 @media only screen and (min-width: 640px) and (max-width: 1049px) {
